--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@angular/platform-browser-dynamic": "~13.3.5",
     "@angular/router": "~13.3.5",
     "intersection-observer": "^0.12.0",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~6.6.0",
-    "zone.js": "~0.11.4",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.4",
