--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.5",
     "@angular/platform-browser-dynamic": "~13.3.5",
     "@angular/router": "~13.3.5",
+    "bootstrap": "^5.1.3",
     "intersection-observer": "^0.12.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~6.6.0",
